# TheStack

./: .dockerignore  .env  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  makefile  requests.http
docker/grafana/dashboards_json/: the_stack_api.json
docker/keycloak/: Dockerfile
docker/postgresql/: database.pgsql
docker/prometheus/: prometheus.yml
docker/redis/: Dockerfile
migrations/: 20240317062844_initial.sql  20240317062906_data.sql
scripts/: create_rsa_kp.sh  prepare_env.sh  setup_keycloak.sh  sqlx_migrate.sh
src/: error.rs  lib.rs  metrics.rs
src/api/: coupon.rs  metrics.rs  mod.rs
src/cache/: coupon.rs  mod.rs
src/database/: coupon.rs  mod.rs
src/error/: api.rs  cache.rs  database.rs  mod.rs  service.rs
src/jobs/: worker.rs
src/model/: coupon.rs  mod.rs
src/service/: coupon.rs
the_stack/: Cargo.toml
the_stack/src/: hash.rs  jwt.rs  lib.rs  main.rs  metrics.rs  tracing.rs
the_stack/src/api/: coupon.rs  dto.rs  files.rs  mod.rs  userlogin.rs  worker.rs
the_stack/src/auth/: jwt.rs  keycloak.rs  mod.rs  userlogin.rs
the_stack/src/cache/: coupon.rs  lock.rs  mod.rs
the_stack/src/database/: coupon.rs  mod.rs  userlogin.rs
the_stack/src/error/: api.rs  cache.rs  database.rs  service.rs
the_stack/src/jobs/: filler.rs  mod.rs  worker.rs
the_stack/src/model/: coupon.rs  mod.rs  userlogin.rs
the_stack/src/service/: coupon.rs  mod.rs  userlogin.rs
the_stack_client/: Cargo.toml
the_stack_client/src/: main.rs
the_stack_tester/: Cargo.toml
the_stack_tester/src/: auth.rs  bench.rs  fetch.rs  main.rs  runner.rs  upload.rs
