[workspace]
resolver = "2"
members = ["the_stack", "the_stack_client", "the_stack_tester"]

[workspace.dependencies]
anyhow = "1.0.81"
argon2 = "0.5.3"
axum = "0.7.4"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
password-hash = { version = "0.5.0", features = ["std"] }
prometheus = "0.13.3"
redis = { version = "0.25.1", features = ["tokio-rustls-comp", "json"] }
redis-macros = "0.2.1"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-retry = "0.3.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
