[workspace]
members = ["the_stack", "the_stack_client", "the_stack_lb", "the_stack_tester"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
console-subscriber = "0.4.1" # tokio
dotenvy = "0.15.7"
envy = "0.4.2"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
password-hash = { version = "0.5.0", features = ["std"] }
prometheus = "0.13.4"
rand = "0.8.5"
redis = { version = "0.27.5", features = [
    "aio",
    "connection-manager",
    "json",
    "tokio-rustls-comp",
] }
redis-macros = "0.4.2"
reqwest = { version = "0.12.9", features = ["json"] }
rslock = "0.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-retry = "0.3.0"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["auth", "cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
