[package]
name = "the_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
console-subscriber = { workspace = true }
dotenv = { workspace = true }
envy = { workspace = true }
password-hash = { workspace = true }
prometheus = { workspace = true }
redis = { workspace = true }
redis-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "the_stack"
path = "src/main.rs"
