[package]
name = "the_stack_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
the_stack = { path = "../the_stack" }
dotenv = { workspace = true }
envy = { workspace = true }
console-subscriber = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "the_stack_tester"
path = "src/main.rs"
