[package]
edition = "2021"
name = "the_stack_tester"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
console-subscriber = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
the_stack = { path = "../the_stack" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "the_stack_tester"
path = "src/main.rs"
